stacks/aks/scripts/http-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: apache-svc  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: httpd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: web-ingress.5f339dbbea314bbdb0dd.eastus.aksapp.io
    http:
      paths:
      - path: /nginx
        pathType: Exact
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
      - path: /apache
        pathType: Exact
        backend:
          service:
            name: apache-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-agic-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: apache-svc
            port:
              number: 80
